@@ -6,6 +6,12 @@ pipeline {
         jdk 'Java11'
     }
 
+   parameters {
+       booleanParam(name: "RELEASE",
+               description: "Build a release from current commit.",
+               defaultValue: false)
+   }
+
    stages {
 
 	   stage('Build') {
@@ -30,26 +36,6 @@ pipeline {
             }
 	   }
 
-	    stage('Record Coverage') {
-            when { branch 'master' }
-            steps {
-                script {
-                    currentBuild.result = 'SUCCESS'
-                 }
-                step([$class: 'MasterCoverageAction', scmVars: [GIT_URL: env.GIT_URL]])
-            }
-        }
-
-        stage('PR Coverage to Github') {
-            when { allOf {not { branch 'master' }; expression { return env.CHANGE_ID != null }} }
-            steps {
-                script {
-                    currentBuild.result = 'SUCCESS'
-                 }
-                step([$class: 'CompareCoverageAction', publishResultAs: 'statusCheck', scmVars: [GIT_URL: env.GIT_URL]])
-            }
-        }
-
 	   stage('Vulnerability Check') {
 	   	  tools {
     	    jdk 'Java8'
@@ -73,6 +59,22 @@ pipeline {
 	         sh "mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.7.0.1746:sonar -Dsonar.host.url=http://192.168.1.15:9000/sonar/ -Dsonar.sources=. -Dsonar.dependencyCheck.xmlReportPath=target/dependency-check-report.xml -Dsonar.dependencyCheck.htmlReportPath=target/dependency-check-report.html"
 	      }
 	   }
+
+	   stage('Release') {
+	   	 environment {
+           MAVEN_OPTS = '-server -Xmx6048m -Xms6048m -Duser.timezone=CET --illegal-access=warn --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED'
+         }
+
+            when {
+                expression { params.RELEASE }
+            }
+            steps {
+                sh "git reset --hard origin/master"
+                sh "git checkout -f master"
+                sh "git reset --hard origin/master"
+                sh "mvn -B gitflow:release "
+                }
+       }
 
 	   stage('Results') {
 	      steps {
